Using List.of() instead for an immutable collection
Signed-off-by: Paolo Patierno <ppatierno@live.com>